--- a/src/app/admin/batch/batch.component.scss
+++ b/src/app/admin/batch/batch.component.scss
@@ -22,3 +22,11 @@ table thead {
     background-color: white;
     border: 1px solid #E9EEF7;
 }
+
+.searchBatch {
+    background: url('/assets/images/search.png') no-repeat scroll 6px 6px;
+    padding-left: 30px;
+    background-color: #F4F5F8;
+    width: 450px;
+    height: 30px;
+  }
