--- a/src/app/admin/mentor/mentor.component.html
+++ b/src/app/admin/mentor/mentor.component.html
@@ -1,1 +1,57 @@
-<p>mentor works!</p>
+<div class="matTable">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #FAA81D;">
+                <b>Batch List</b>
+              </a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="search form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          </form>
+          <button mat-button type="button" class="newBatch">New Mentor</button>
+        </div>
+      </div>
+    </nav>
+    <table class="table">
+      <thead>
+        <tr>
+          <td>
+            <mat-checkbox class="example-margin"></mat-checkbox>
+          </td>
+          <th scope="col">No</th>
+          <th scope="col">Batch ID</th>
+          <th scope="col">Batch Name</th>
+          <th scope="col">Mentor Name</th>
+          <th scope="col">Technologies</th>
+          <th scope="col">Start Date</th>
+          <th scope="col">End Date</th>
+          <th scope="col">Status</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <mat-checkbox class="example-margin"></mat-checkbox>
+          </td>
+          <th>1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>Mark</td>
+          <td class="action">
+            <span class="material-symbols-outlined"> delete</span>
+            <span class="material-symbols-outlined">edit</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
