--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,8 +9,7 @@
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee"
-          aria-label="Search" />
+        <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee" aria-label="Search" />
       </form>
       <button mat-button type="button" class="logout">Logout</button>
     </div>
@@ -35,9 +34,9 @@
 
   <mat-drawer-content>
     <div class="home">
-      <h6>Home</h6>
+      <h4>Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>      
-      <h6>Batch</h6>
+      <h4>Batch</h4>
     </div>
 
     <router-outlet></router-outlet>
