--- a/src/app/admin/batch/batch.component.html
+++ b/src/app/admin/batch/batch.component.html
@@ -10,9 +10,9 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="search form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <input class="searchBatch form-control me-2" type="search" placeholder="Search Mentor/Employee" aria-label="Search" />
         </form>
-        <button mat-button type="button" class="newBatch btn btn-warning" (click)="openDialog()">New Batch</button>
+        <button mat-button type="button" class="newBatch" (click)="openDialog()">New Batch</button>
       </div>
     </div>
   </nav>
