--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,4 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+body { margin: 0; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
