--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,15 +18,15 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
-    <button mat-button class="mat-button" routerLink="batch" [routerLinkActive]="['active']">
+    <button mat-button class="matt-button p-0" routerLink="batch" [routerLinkActive]="['active']">
       <img src="/assets/images/Batch.png" alt="" />
       <small>Batch</small>
     </button>
-    <button mat-button class="mat-button" routerLink="mentor" [routerLinkActive]="['active']">
+    <button mat-button class="mat-button p-0" routerLink="mentor" [routerLinkActive]="['active']">
       <img src="/assets/images/team.png" alt="" />
       <small>Mentor</small>
     </button>
-    <button mat-button class="mat-button" routerLink="" [routerLinkActive]="['active']">
+    <button mat-button class="mat-button p-0" routerLink="request" [routerLinkActive]="['active']">
       <img src="/assets/images/add-user (2).png" alt="" />
       <small>Request</small>
     </button>
