--- a/src/app/admin/mentor/mentor.component.html
+++ b/src/app/admin/mentor/mentor.component.html
@@ -10,7 +10,7 @@
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="search form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <input class="searchBatch form-control me-2" type="search" placeholder="Search Mentor/Employee" aria-label="Search" />
           </form>
           <button mat-button type="button" class="newBatch">New Mentor</button>
         </div>
@@ -54,4 +54,3 @@
       </tbody>
     </table>
   </div>
-  
