--- a/src/app/admin/mentor/mentor.component.scss
+++ b/src/app/admin/mentor/mentor.component.scss
@@ -13,12 +13,22 @@ tr {
     border-width: 0;
 }
 
-
 table thead {
-    background-color: #E9EEF7;
+  background-color: #E9EEF7;
+  tr th {
+    font-weight: 500;
+  }
 }
 
 .matTable {
     background-color: white;
     border: 1px solid #E9EEF7;
+}
+
+.searchBatch {
+  background: url('/assets/images/search.png') no-repeat scroll 6px 6px;
+  padding-left: 30px;
+  background-color: #F4F5F8;
+  width: 450px;
+  height: 30px;
 }
