--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.previous {
+    color: #ffffff;
+    background-color: #086288;
+    border: 1px solid #075575;
+    font-weight: 400;
+}
+
+.next {
+    color: white;
+    background-color: #086288;
+    border: 1px solid #075575;
+    font-weight: 400;
+}
