--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,5 +1,5 @@
-<mat-tab-group>
-  <mat-tab label="Primary Info" [routerLinkActive]="['active']"> Content 1 </mat-tab>
+<!-- <mat-tab-group>
+  <mat-tab label="Primary Info" [routerLinkActive]="['active']" routerLink="primary"><app-primary-info></app-primary-info> </mat-tab>
   <mat-tab label="Secondary Info"> Content 2 </mat-tab>
   <mat-tab label="Education Details"> Content 3 </mat-tab>
   <mat-tab label="Address Details"> Content 3 </mat-tab>
@@ -7,4 +7,11 @@
   <mat-tab label="Technical Skills"> Content 3 </mat-tab>
   <mat-tab label="Experience"> Content 3 </mat-tab>
   <mat-tab label="Contact"> Content 3 </mat-tab>
-</mat-tab-group>
+</mat-tab-group> -->
+
+
+<nav mat-tab-nav-bar>
+  <a mat-tab-link *ngFor="let link of links" [routerLink]="link.route" routerLinkActive #rla="routerLinkActive"
+    [class.active]="rla.isActive">{{link.label}}</a>
+</nav>
+<router-outlet></router-outlet>
