--- a/src/app/employee/experience/experience.component.html
+++ b/src/app/employee/experience/experience.component.html
@@ -1,41 +1,39 @@
 <div class="container">
-
-    <mat-accordion>
-      <mat-expansion-panel (opened)="panelOpenState = true">
-        <mat-expansion-panel-header>
-          <mat-panel-title></mat-panel-title>
-          <mat-panel-description></mat-panel-description>
-        </mat-expansion-panel-header>
-        <form [formGroup]="skillsForm" (ngSubmit)="onSubmit()">
-            <div class="row">
-                <div class="col-md-6">
-                  <mat-label class="d-block">Company Name</mat-label>
-                  <mat-form-field appearance="outline">
-                      <input matInput class="matInput" formControlName="companyName" required>
-                    </mat-form-field>
-                </div>
-                <div class="col-md-6">
-                  <mat-label class="d-block">Years of Experience</mat-label>
-                  <mat-form-field appearance="outline">
-                    <input matInput class="matInput" formControlName="experience" required>
-                  </mat-form-field>
-                </div>
-              </div>
+  <form [formGroup]="experienceForm" (ngSubmit)="onSubmit()">
+    <div class="experience">
+      <mat-accordion formArrayName="experienceArray" *ngFor="let contact of getExperience(); let i = index">
+        <mat-expansion-panel (opened)="panelOpenState = true" [formGroupName]="i">
+          <mat-expansion-panel-header>
+            <mat-panel-title></mat-panel-title>
+            <mat-panel-description></mat-panel-description>
+          </mat-expansion-panel-header>
+          <div class="row">
+            <div class="col-md-6">
+              <mat-label class="d-block">Company Name</mat-label>
+              <mat-form-field appearance="outline">
+                <input matInput class="matInput" formControlName="companyName" required>
+              </mat-form-field>
+            </div>
+            <div class="col-md-6">
+              <mat-label class="d-block">Years of Experience</mat-label>
+              <mat-form-field appearance="outline">
+                <input matInput class="matInput" formControlName="experience" required>
+              </mat-form-field>
+            </div>
+          </div>
           <div class="row">
             <div class="col-md-6">
               <mat-label class="d-block">Date of Joining</mat-label>
               <mat-form-field appearance="outline">
-                  <input matInput [matDatepicker]="picker" formControlName="joining" required>
-                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
+                <input matInput [matDatepicker]="picker" formControlName="joining" required>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
             </div>
             <div class="col-md-6">
               <mat-label class="d-block">Skill Rating</mat-label>
               <mat-form-field appearance="outline">
-                <input matInput [matDatepicker]="relieve" formControlName="relieving" required>
-                <mat-datepicker-toggle matSuffix [for]="relieve"></mat-datepicker-toggle>
-                <mat-datepicker #relieve></mat-datepicker>
+                <input matInput class="matInput" formControlName="relieving" required>
               </mat-form-field>
             </div>
           </div>
@@ -50,22 +48,32 @@
               </mat-form-field>
             </div>
             <div class="col-md-6">
-                <mat-label class="d-block">Location</mat-label>
-                <mat-form-field appearance="outline">
-                  <input matInput class="matInput" formControlName="location" required>
-                </mat-form-field>
-              </div>
+              <mat-label class="d-block">Location</mat-label>
+              <mat-form-field appearance="outline">
+                <input matInput class="matInput" formControlName="location" required>
+              </mat-form-field>
+            </div>
           </div>
-        </form>
-      </mat-expansion-panel>
-    </mat-accordion>
-  
-    <mat-card>
-      <div class="submit">
-        <button mat-raised-button class="previous">Previous</button>
-        <button mat-raised-button class="next" [disabled]="skillsForm.invalid">Next</button>
-      </div>
-    </mat-card>
-  
-  </div>
-  
+          <ng-container *ngIf="i>=1">
+            <div class="delete" (click)=" deleteContact(i)">
+              <span class="material-symbols-outlined">delete</span>Delete
+            </div>
+          </ng-container>
+          <ng-container *ngIf="i<1">
+            <div class="add" (click)="addContact()">
+              <span class="material-symbols-outlined">add_circle</span>Add
+            </div>
+          </ng-container>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+  </form>
+
+  <mat-card class="submission">
+    <div class="submit">
+      <button mat-raised-button class="previous">Previous</button>
+      <button mat-raised-button class="next" [disabled]="experienceForm.invalid">Next</button>
+    </div>
+  </mat-card>
+
+</div>
