--- a/src/app/employee/address-details/address-details.component.scss
+++ b/src/app/employee/address-details/address-details.component.scss
@@ -45,3 +45,8 @@ mat-card {
 .mat-form-field+.mat-form-field {
     margin-left: 8px;
 }
+
+.add, .delete {
+    cursor: pointer;
+    display: flex;
+}
