--- a/src/app/employee/bank-details/bank-details.component.html
+++ b/src/app/employee/bank-details/bank-details.component.html
@@ -1,64 +1,63 @@
 <div class="container">
-    <form [formGroup]="bankForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div class="col-md-6">
-          <mat-label class="d-block">Account No.</mat-label>
-          <mat-form-field appearance="outline">
-            <input matInput class="matInput" formControlName="account" required>
-          </mat-form-field>
-        </div>
-        <div class="col-md-6">
-          <mat-label class="d-block">Bank Name</mat-label>
-          <mat-form-field appearance="outline">
-            <input matInput class="matInput" formControlName="bankName" required>
-          </mat-form-field>
-        </div>
+  <form [formGroup]="bankForm" (ngSubmit)="onSubmit()">
+    <div class="row">
+      <div class="col-md-6">
+        <mat-label class="d-block">Account No.</mat-label>
+        <mat-form-field appearance="outline">
+          <input matInput class="matInput" formControlName="account" required>
+        </mat-form-field>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <mat-label class="d-block">Account Type</mat-label>
-          <mat-form-field appearance="outline">
-            <mat-select formControlName="accountType" required>
-                <mat-option value="option1">Married</mat-option>
-                <mat-option value="option2">Unmarried</mat-option>
-              </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col-md-6">
-          <mat-label class="d-block">IFSC Code</mat-label>
-          <mat-form-field appearance="outline">
-            <input matInput class="matInput" formControlName="ifsc" required>
-          </mat-form-field>
-        </div>
+      <div class="col-md-6">
+        <mat-label class="d-block">Bank Name</mat-label>
+        <mat-form-field appearance="outline">
+          <input matInput class="matInput" formControlName="bankName" required>
+        </mat-form-field>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <mat-label class="d-block">Branch</mat-label>
-          <mat-form-field appearance="outline">
-            <mat-select formControlName="branch" required>
-                <mat-option value="option1">Married</mat-option>
-                <mat-option value="option2">Unmarried</mat-option>
-              </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col-md-6">
-          <mat-label class="d-block">State</mat-label>
-          <mat-form-field appearance="outline">
-            <mat-select formControlName="state" required>
-                <mat-option value="option1">Married</mat-option>
-                <mat-option value="option2">Unmarried</mat-option>
-              </mat-select>
-          </mat-form-field>
-        </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <mat-label class="d-block">Account Type</mat-label>
+        <mat-form-field appearance="outline">
+          <mat-select formControlName="accountType" required>
+            <mat-option value="option1">Married</mat-option>
+            <mat-option value="option2">Unmarried</mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
-    </form>
-  
-    <mat-card>
-      <div class="submit">
-        <button mat-raised-button class="previous">Previous</button>
-        <button mat-raised-button class="next" [disabled]="bankForm.invalid">Next</button>
+      <div class="col-md-6">
+        <mat-label class="d-block">IFSC Code</mat-label>
+        <mat-form-field appearance="outline">
+          <input matInput class="matInput" formControlName="ifsc" required>
+        </mat-form-field>
       </div>
-    </mat-card>
-  
-  </div>
-  
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <mat-label class="d-block">Branch</mat-label>
+        <mat-form-field appearance="outline">
+          <mat-select formControlName="branch" required>
+            <mat-option value="option1">Married</mat-option>
+            <mat-option value="option2">Unmarried</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-6">
+        <mat-label class="d-block">State</mat-label>
+        <mat-form-field appearance="outline">
+          <mat-select formControlName="state" required>
+            <mat-option value="option1">Married</mat-option>
+            <mat-option value="option2">Unmarried</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+
+  <mat-card class="submission">
+    <div class="submit">
+      <button mat-raised-button class="previous">Previous</button>
+      <button mat-raised-button class="next" [disabled]="bankForm.invalid">Next</button>
+    </div>
+  </mat-card>
+
+</div>
